# QtWordEditor

./: .gitignore  2026-02-19.md  CMakeLists.txt  CMakePresets.json  QtWordEditor设计文档.md  QtWordEditor详细文档.md  compile_translations.bat  convert_files.ps1  update_includes.py  代码重构优化建议.md  光标统一合并设计文档.md  功能实现记录.md  工具栏样式显示逻辑设计文档.md  性能优化分析报告.md  文字输入和光标显示架构.md  更详细的文档.md  样式按钮点击流程设计文档.md  样式按钮点击详细流程图.md  段落左缩进右缩进设计文档.md  每一个部分详细的文档.md  流程.md  调试输出.txt
.trae/rules/: project_rules.md
app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
core/: CMakeLists.txt  Global.h
core/commands/: EditCommand.cpp  InsertBlockCommand.cpp  InsertTextCommand.cpp  InsertTextCommand.h  RemoveBlockCommand.cpp  RemoveTextCommand.cpp  SetCharacterStyleCommand.cpp  SetParagraphStyleCommand.cpp
core/document/: Block.cpp  Block.h  CharacterStyle.cpp  Document.cpp  ImageBlock.cpp  Page.cpp  Page.h  ParagraphBlock.cpp  ParagraphBlock.h  ParagraphStyle.cpp  ParagraphStyle.h  Section.cpp  Span.cpp  Span.h  TableBlock.cpp  TableBlock.h
core/layout/: LayoutEngine.cpp  PageBuilder.cpp
core/styles/: StyleManager.cpp
core/utils/: Constants.h  FontUtils.cpp  FontUtils.h
editcontrol/: CMakeLists.txt
editcontrol/cursor/: Cursor.cpp  Cursor.h
editcontrol/formatting/: FormatController.cpp  FormatController.h
editcontrol/handlers/: EditEventHandler.cpp
editcontrol/selection/: Selection.cpp  Selection.h
graphics/: CMakeLists.txt
graphics/factory/: BlockItemFactory.cpp
graphics/items/: BaseBlockItem.cpp  BaseBlockItem.h  CursorItem.cpp  CursorItem.h  ImageBlockItem.cpp  PageItem.cpp  PageItem.h  SelectionItem.cpp  TableBlockItem.cpp  TextBlockItem.cpp  TextBlockItem.h
graphics/scene/: DocumentScene.cpp
graphics/view/: DocumentView.cpp  DocumentView.h
include/app/: Application.h
include/core/: Global.h
include/core/commands/: EditCommand.h  InsertBlockCommand.h  InsertTextCommand.h  ParagraphCommand.h  RemoveBlockCommand.h  RemoveTextCommand.h  SetCharacterStyleCommand.h  SetParagraphStyleCommand.h
include/core/document/: Block.h  CharacterStyle.h  Document.h  ImageBlock.h  InlineSpan.h  MathSpan.h  Page.h  ParagraphBlock.h  ParagraphStyle.h  Section.h  Span.h  TextSpan.h
include/core/document/math/: FractionMathSpan.h  NumberMathSpan.h  RowContainerMathSpan.h
include/core/layout/: LayoutEngine.h  PageBuilder.h
include/core/styles/: StyleManager.h
include/core/utils/: Constants.h  Logger.h
include/editcontrol/cursor/: Cursor.h  UnifiedCursor.h
include/editcontrol/formatting/: FormatController.h
include/editcontrol/handlers/: EditEventHandler.h
include/editcontrol/selection/: Selection.h
include/graphics/factory/: BlockItemFactory.h  MathItemFactory.h
include/graphics/formula/: FractionItem.h  MathCursor.h  MathItem.h  NumberItem.h  RowContainerItem.h
include/graphics/items/: BaseBlockItem.h  CursorItem.h  ImageBlockItem.h  SelectionItem.h  TableBlockItem.h  TextBlockItem.h  TextBlockLayoutEngine.h  TextFragment.h  UnifiedCursorVisual.h
include/graphics/scene/: DocumentScene.h
include/graphics/view/: DocumentView.h
include/io/exporters/: PdfExporter.h
include/io/serializers/: XmlSerializer.h
include/ui/dialogs/: FontDialog.h  PageSetupDialog.h  ParagraphDialog.h  StyleManagerDialog.h
include/ui/mainwindow/: MainWindow.h
include/ui/ribbon/: RibbonBar.h
include/ui/widgets/: DebugConsole.h  FormatToolBar.h  Ruler.h
io/: CMakeLists.txt
io/exporters/: PdfExporter.cpp  PdfExporter.h
io/importers/: TxtImporter.cpp  TxtImporter.h
io/serializers/: XmlSerializer.cpp  XmlSerializer.h
src/app/: Application.cpp  main.cpp
src/core/commands/: EditCommand.cpp  InsertBlockCommand.cpp  InsertTextCommand.cpp  ParagraphCommand.cpp  RemoveBlockCommand.cpp  RemoveTextCommand.cpp  SetCharacterStyleCommand.cpp  SetParagraphStyleCommand.cpp
src/core/document/: Block.cpp  CharacterStyle.cpp  Document.cpp  ImageBlock.cpp  InlineSpan.cpp  MathSpan.cpp  Page.cpp  ParagraphBlock.cpp  ParagraphStyle.cpp  Section.cpp  Span.cpp  TableBlock.cpp  TextSpan.cpp
src/core/document/math/: FractionMathSpan.cpp  NumberMathSpan.cpp  RowContainerMathSpan.cpp
src/core/layout/: LayoutEngine.cpp  PageBuilder.cpp
src/core/styles/: StyleManager.cpp
src/core/utils/: FontUtils.cpp  Logger.cpp
src/editcontrol/cursor/: Cursor.cpp  UnifiedCursor.cpp
src/editcontrol/formatting/: FormatController.cpp
src/editcontrol/handlers/: EditEventHandler.cpp
src/editcontrol/selection/: Selection.cpp
src/graphics/factory/: BlockItemFactory.cpp  MathItemFactory.cpp
src/graphics/formula/: FractionItem.cpp  MathCursor.cpp  MathItem.cpp  NumberItem.cpp  RowContainerItem.cpp
src/graphics/items/: BaseBlockItem.cpp  CursorItem.cpp  ImageBlockItem.cpp  PageItem.cpp  SelectionItem.cpp  TableBlockItem.cpp  TextBlockItem.cpp  TextBlockLayoutEngine.cpp  TextFragment.cpp  UnifiedCursorVisual.cpp
src/graphics/scene/: DocumentScene.cpp
src/graphics/view/: DocumentView.cpp
src/io/exporters/: PdfExporter.cpp
src/io/importers/: TxtImporter.cpp
src/io/serializers/: XmlSerializer.cpp
src/ui/dialogs/: FontDialog.cpp  InsertImageDialog.cpp  PageSetupDialog.cpp  ParagraphDialog.cpp  StyleManagerDialog.cpp
src/ui/mainwindow/: MainWindow.cpp
src/ui/ribbon/: RibbonBar.cpp
src/ui/widgets/: DebugConsole.cpp  FormatToolBar.cpp  Ruler.cpp
translations/: QtWordEditor_en_US.ts  QtWordEditor_zh_CN.ts  README.md
ui/: CMakeLists.txt
ui/dialogs/: FontDialog.cpp  FontDialog.h  InsertImageDialog.cpp  InsertImageDialog.h  PageSetupDialog.cpp  ParagraphDialog.cpp  ParagraphDialog.h
ui/mainwindow/: MainWindow.cpp  MainWindow.h
ui/ribbon/: RibbonBar.cpp  RibbonBar.h
ui/widgets/: FormatToolBar.cpp  FormatToolBar.h  Ruler.cpp
u文档/: QtWordEditor详细文档.md  TextBlockItem完全重写设计文档.md  update_translations.bat  功能实现记录.md  数学公式编辑器完整设计文档.md  数学公式编辑器完整设计文档_最终方案.md  样式按钮点击流程设计文档.md  样式系统详细分析.md  调试输出.txt
